--- a/frontend/src/components/PaginaPerroPerdido/PaginaPerroPerdido.css
+++ b/frontend/src/components/PaginaPerroPerdido/PaginaPerroPerdido.css
@@ -24,22 +24,25 @@
     .perro-card div strong {
         margin-bottom: 0px;
         font-size: 0.7rem;
-    }
-    .whatsapp-button {
-        display: inline-block;
-        margin-top: 10px;
-        padding: 8px 12px;
-        background-color: #25d366;
-        color: white;
-        font-weight: bold;
-        text-align: center;
-        border-radius: 5px;
-        text-decoration: none;
-        transition: background-color 0.3s ease;
-      }
-      
-      .whatsapp-button:hover {
-        background-color: #1ebe5a;
-      }
-      
+    } 
+}
+
+.whatsapp-button {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 8px 12px;
+    background-color: #25d366;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: all 0.4s ease;
+}
+
+.whatsapp-button:hover {
+    background-color: #1eb156;
+    color: white;
+    text-decoration: none;
+    transform: scale(1.02);
 }
