--- a/frontend/src/components/ReportList/ReportList.css
+++ b/frontend/src/components/ReportList/ReportList.css
@@ -9,7 +9,7 @@
   .report-list-container h1 {
     text-align: center;
     margin-bottom: 30px;
-    color: #ff6f61;
+    color: #ff8b07;
     font-size: 2rem;
     text-transform: uppercase;
   }
