--- a/frontend/src/components/ReportList/ReportList.css
+++ b/frontend/src/components/ReportList/ReportList.css
@@ -109,3 +109,12 @@
     100% { transform: rotate(360deg); }
   }
   
+
+
+.no-reports-message {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #e88d26;
+  margin-top: 30px;
+  font-weight: bold;
+}
