--- a/frontend/src/components/PerritoPerdido/PerritoPerdidoForm.css
+++ b/frontend/src/components/PerritoPerdido/PerritoPerdidoForm.css
@@ -256,7 +256,15 @@ textarea:focus,
 
 
 
-.spinner {
+.loading-messagess {
+  display: flex;  
+  flex-direction: column;  
+  justify-content: center; 
+  align-items: center;     
+  z-index: 9999;           
+}
+
+.spinnerss {
   width: 40px;
   height: 40px;
   border: 4px solid #f3f3f3;
