--- a/frontend/src/components/PerritoVisto/PerritoVistoForm.css
+++ b/frontend/src/components/PerritoVisto/PerritoVistoForm.css
@@ -280,9 +280,15 @@ textarea:focus,
   margin-right: 8px;
 }
 
+.loading-messages {
+  display: flex;  
+  flex-direction: column;  
+  justify-content: center; 
+  align-items: center;     
+  z-index: 9999;           
+}
 
-
-.spinner {
+.spinners {
   width: 40px;
   height: 40px;
   border: 4px solid #f3f3f3;
