--- a/frontend/src/components/PerfilPerro/PerfilPerro.css
+++ b/frontend/src/components/PerfilPerro/PerfilPerro.css
@@ -21,7 +21,7 @@
     max-width: 400px;
     margin: 20px;
     width: 100%;
-    background-color: rgba(207, 203, 203, 0.8); /* Fondo blanco con transparencia */
+    background-color:rgba(76, 175, 80, 0.05); /* Fondo blanco con transparencia */
     border-radius: 8px; /* Esquinas redondeadas */
     padding: 20px; /* Espaciado interno */
     box-shadow: 0 4px 10px rgba(93, 93, 93, 0.1); /* Sombra para darle profundidad */
@@ -133,7 +133,7 @@
     width: 150px;
 }
   .comentario-boton {
-    background-color: #ee9b5b;
+    background-color: #25d366;
     color: white;
     border: none;
     border-radius: 4px;
