--- a/frontend/src/components/PerfilUser/perfilUser.css
+++ b/frontend/src/components/PerfilUser/perfilUser.css
@@ -17,11 +17,11 @@
 h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #c35847;
+    color: #60c65e;
     font-size: 2rem;
     white-space: nowrap;
     overflow: hidden;
-    border-right: 4px solid #c35847;
+    border-right: 4px solid #b28179;
     width: fit-content;
     animation: typing 2s steps(30) 1s forwards, blink 0.75s step-end infinite, hideCursor 0s 2s forwards;
 }
@@ -43,7 +43,7 @@ h2 {
 }
 @keyframes hideCursor {
     0% {
-        border-right: 4px solid #c35847;
+        border-right: 4px solid #9cd474;
     }
     100% {
         border-right: none;
@@ -56,7 +56,7 @@ h2 {
 }
 
 strong {
-    color: #c35847;
+    color: #47c34d;
 }
 
 a {
@@ -65,7 +65,7 @@ a {
 
 a:hover {
     text-decoration: underline;
-    color: #c35847;
+    color: #54c364;
 }
 
 .perfil-user-image {
@@ -77,7 +77,7 @@ a:hover {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border: 2px solid #c35847;
+    border: 2px solid #9be772;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
