--- a/frontend/src/components/RecaudacionDeFondos/recaudacionFondos.css
+++ b/frontend/src/components/RecaudacionDeFondos/recaudacionFondos.css
@@ -2,6 +2,7 @@
     padding: 20px;
     max-width: 800px;
     margin: 0 auto;
+    text-align: center;
   }
   
   .fundraiser-title {
@@ -36,7 +37,7 @@
   .qr-code-container {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 20px 0;
   }
   
   .qr-image {
