--- a/frontend/src/components/PaginaPerroPerdido/PaginaPerroPerdido.css
+++ b/frontend/src/components/PaginaPerroPerdido/PaginaPerroPerdido.css
@@ -65,7 +65,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
   }
   
   .perro-card {
