--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -164,8 +164,15 @@ body, html {
   font-family: 'Poppins', sans-serif;
 }
 
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .footer p {
   color: white;
+  font-size: small;
 }
 
 .footer-content {
@@ -378,7 +385,9 @@ button:focus:not(:focus-visible) {
   }
   
   .navbar {
-    padding: 0.3rem;
+    padding: 0.3rem 0.3rem 0.3rem 1rem;
+
+    justify-content: initial;
   }
   
   .navbar-list {
@@ -402,6 +411,7 @@ button:focus:not(:focus-visible) {
     font-size: 15px;
     cursor: pointer;
     color: white;
+    
   }
   
   .overlay {
@@ -421,6 +431,25 @@ button:focus:not(:focus-visible) {
   
   .buttons {
     flex-direction: column;
+  }
+
+  .menu-user-open{
+    top: 100%;
+    left: 10%;
+  }
+  .menu-user-open::after {
+    content: '';
+    position: absolute;
+    top: 7%;
+    left: 0;
+    transform: translateX(-108%);
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent white transparent transparent;
+    rotate: 90deg;
+  }
+  .text-home {
+    margin-top: 5rem;
   }
 }
 
