--- a/frontend/src/components/DogRecognition/DogRecognition.css
+++ b/frontend/src/components/DogRecognition/DogRecognition.css
@@ -13,21 +13,24 @@
   }
   
   .image-preview {
-    max-width: 400px;
-    width: 100%;
+    /* max-width: 35wv; */
+    width: 30vw;
+    /* max-height: 40%; */
+    height: 20vw;
     margin: 20px 0;
   }
   
   .image-preview img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   }
   
   button {
     padding: 12px 24px;
-    background-color: #a5d390;
+    background-color: #388E3C;
    
     border: none;
     border-radius: 4px;
@@ -93,6 +96,7 @@
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     margin-top: 20px;
+    justify-items: center;
   }
   
   .coincidencia-card {
@@ -101,6 +105,9 @@
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     overflow: hidden;
     transition: transform 0.3s;
+    width: 70%;
+    min-width: 50%;
+    max-width: 80%;
   }
   
   .coincidencia-card:hover {
