--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -96,3 +96,20 @@
   display: block;
   text-align: left;
 }
+
+.toggle-password {
+  position: absolute;
+
+  left: 21.5rem;
+  top: 44%; 
+  padding: 0%;
+  transform: translateY(-40%); 
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: white; 
+  transition: color 0.3s ease;
+}
+
+
