--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -174,3 +174,22 @@
   border-radius: 4px;
   text-align: center;
 }
+
+
+
+.toggle-password-reg {
+  position: absolute;
+
+  left: 19.5rem;
+  top: 23%; 
+  padding: 0%;
+  transform: translateY(-40%); 
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: white; 
+  transition: color 0.3s ease;
+}
+
+
