--- a/frontend/src/paginaNoEncontrada/PaginaNoEncontrada.css
+++ b/frontend/src/paginaNoEncontrada/PaginaNoEncontrada.css
@@ -16,7 +16,7 @@
     color: #ff6f61;
   }
   
-  .error-message {
+  .error-message-page {
     font-size: 2rem;
     margin: 1rem 0;
     color: #6c757d;
