--- a/frontend/src/components/PerritoPerdido/PerritoPerdidoForm.css
+++ b/frontend/src/components/PerritoPerdido/PerritoPerdidoForm.css
@@ -277,3 +277,18 @@ textarea:focus,
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+@media (max-width: 768px) {
+  .container-texta-fecha-dir {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .textarea {
+    width: 90%;
+  }
+
+  .nombre-perrito {
+    width: 90%;
+  }
+}
