--- a/frontend/src/components/ReportList/ReportList.css
+++ b/frontend/src/components/ReportList/ReportList.css
@@ -129,6 +129,11 @@
       padding: 8px;
   }
 
+  .td-id{
+    font-size: 0.7rem;
+    padding: 4px;
+  }
+
   .report-table th {
       font-size: 0.7rem;
       padding: 8px 5px;
