--- a/frontend/src/components/ReportList/ReportList.css
+++ b/frontend/src/components/ReportList/ReportList.css
@@ -56,10 +56,7 @@
   border-bottom: 1px solid rgba(76, 175, 80, 0.1);
 }
 
-.report-table th:first-child,
-.report-table td:first-child {
-  padding-left: 20px;
-}
+
 
 .report-table th:last-child,
 .report-table td:last-child {
@@ -112,7 +109,6 @@
   margin-top: 30px;
   font-weight: bold;
 }
-
 @media (max-width: 600px) {
   .report-list-container {
       padding: 10px;
@@ -124,14 +120,10 @@
       font-size: 0.8rem;
   }
 
-  .report-table th,
-  .report-table td {
-      padding: 8px;
-  }
 
-  .td-id{
-    font-size: 0.7rem;
-    padding: 4px;
+
+  .td-id {
+      font-size: 0.7rem;
   }
 
   .report-table th {
@@ -151,20 +143,23 @@
       overflow: hidden;
   }
 
-  .td-description {
-    display: block;
-    text-align: left; 
-    border-bottom: 1px solid rgba(76, 175, 80, 0.05);
-    padding-left: 10px; 
+  /* Ajustes específicos para descripciones largas */
+  .td-description,
+  .td-description-cell {
+      text-align: justify;        /* Justificar texto */
+      white-space: pre-wrap;      /* Respeta saltos de línea */
+      word-break: break-word;     /* Evita desbordes */
+       /* Espaciado inicial */
+      max-width: 100%;            /* Limitar ancho */
+      overflow-wrap: break-word;  /* Divide palabras largas */
   }
 
   .report-table td {
-    word-break: break-word;
-    display: block;
-    text-align: right;
-    border-bottom: 1px solid rgba(76, 175, 80, 0.05);
+      word-break: break-word;
+      display: block;
+      text-align: right;
+      border-bottom: 1px solid rgba(76, 175, 80, 0.05);
   }
-
 
   .report-table td:before {
       content: attr(data-label);
@@ -187,4 +182,3 @@
       margin-top: 20px;
   }
 }
-   
