--- a/frontend/src/components/Contacto/Contacto.css
+++ b/frontend/src/components/Contacto/Contacto.css
@@ -1,9 +1,9 @@
 
 .contact-page {
-  padding: 20px;
+  padding: 7px;
   max-width: 800px;
   margin: 0 auto;
-  line-height: 1.6;
+  /* line-height: 1.6; */
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -12,7 +12,7 @@
 .contact-title {
   text-align: center;
   margin-bottom: 30px;
-  font-size: 2em;
+  /* font-size: 2em; */
   color: #333;
 }
 
@@ -27,7 +27,7 @@
 .faq-title {
   color: #555;
   margin-bottom: 10px;
-  font-size: 1.4em;
+  /* font-size: 5px; */
 }
 
 
