--- a/frontend/src/errorPage/errorPage.css
+++ b/frontend/src/errorPage/errorPage.css
@@ -1,13 +1,16 @@
 .error-page {
-    text-align: center;
-    max-width: 600px;
-    margin: auto;
-    padding: 40px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f8d7da;
-    color: #721c24;
-  }
+  text-align: center;
+  max-width: 600px;
+  margin: 100px auto; 
+  padding: 40px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f8d7da;
+  color: #721c24;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+  position: relative; 
+}
+
   
   .error-page h1 {
     font-size: 2rem;
