--- a/frontend/src/components/Contacto/Contacto.css
+++ b/frontend/src/components/Contacto/Contacto.css
@@ -26,8 +26,12 @@
 
 .faq-title {
   color: #555;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   /* font-size: 5px; */
+  font-size: 1.8em; /* Aumentar el tamaño para pantallas grandes */
+  word-wrap: break-word;
+  white-space: normal;
+  margin-bottom: 25px;
 }
 
 
